// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumb items from from subject and topicpath 1`] = `
[
  {
    "name": "Home",
    "to": "/",
  },
  {
    "name": "Historie vg2 og vg3",
    "to": "/subject:9/",
  },
  {
    "name": "Om Utforskeren ",
    "to": "/subject:9/topic:1:179373/",
  },
  {
    "name": "Samfunnsfaglige tenkemåter",
    "to": "/subject:9/topic:1:179373/topic:1:170165/",
  },
]
`;

exports[`breadcrumb items from from subject, topicpath and resouce 1`] = `
[
  {
    "name": "Home",
    "to": "/",
  },
  {
    "name": "Historie vg2 og vg3",
    "to": "/subject:9/",
  },
  {
    "name": "Om Utforskeren ",
    "to": "/subject:9/topic:1:179373/",
  },
  {
    "name": "Samfunnsfaglige tenkemåter",
    "to": "/subject:9/topic:1:179373/topic:1:170165/",
  },
  {
    "name": "Utforskeren",
    "to": "/subject:9/topic:1:179373/topic:1:170165/resource:1:168389",
  },
]
`;

exports[`breadcrumb items from subject  1`] = `
[
  {
    "name": "Home",
    "to": "/",
  },
  {
    "name": "Historie vg2 og vg3",
    "to": "/subject:9/",
  },
]
`;
